[project]
name = "packaging_test"
version = "0.1.2"
description = "test library"
readme = "README.md"
authors = [
    { name = "Ariel Kanterewicz", email = "akanterewicz@baufest.com"},
]
requires-python = ">=3.10"
dependencies = [
    "isodate>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
